--- a/app/src/main/res/layout/payment_layout.xml
+++ b/app/src/main/res/layout/payment_layout.xml
@@ -1,10 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="100dp"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".activity.PaymentActivity2"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,24 +18,45 @@
         android:textStyle="italic"
         android:layout_gravity="center"/>
 
-    <EditText
-        android:id="@+id/editTextCardNumber"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Card Number" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total"
+            android:textSize="20dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"/>
+        <TextView
+            android:id="@+id/totalTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textSize="20dp"
+            android:textColor="@color/black"
 
-    <EditText
-        android:id="@+id/editTextExpiryDate"
+            android:drawableRight="@drawable/ic_dollar"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
+
+<!--    <com.stripe.android.view.CardInputWidget-->
+<!--        android:id="@+id/cardInputWidget"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content" />-->
+
+    <TextView
+        android:id="@+id/paymentmethod"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Expiry Date" />
+        android:textAlignment="center"
+        android:text="select payment method"
+        android:textStyle="italic"
+        android:paddingVertical="20dp"
 
-    <EditText
-        android:id="@+id/editTextCVV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CVV" />
-
+        />
     <Button
         android:id="@+id/buttonPay"
         android:layout_width="wrap_content"
